--- a/application/views/scripts/forma-pagamento/editar.phtml
+++ b/application/views/scripts/forma-pagamento/editar.phtml
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-lg-2"></div>
     <div class="col-lg-8">
-     <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.8);">
+     <ol class="breadcrumb" style="background-color:rgba(0,0,0,0.7);">
       <li>
         <a href="<?= $this->baseUrl('menuinicial') ?>">
           menuinicial/
@@ -19,38 +19,26 @@
    <form method="POST">
 
 
-<script>//Validar somente numero
-function somenteNumeros(num){
-  var er = /[^0-9.]/;
-  er.lastIndex = 0;
-  var campo = num;
-  if (er.test(campo.value)) {
-    campo.value = "";
-  }
-}
-</script>
+    <div class="card mb-3" style="background-color:rgba(0,0,0,0.7);">
+      <div class="card-body"> 
+        <div class="form-group">
+          <input type="hidden" id="id_pagamento" name="id_pagamento" value="<?php echo $this->pagamento->getId_pagamento(); ?>">
+          <label for="">Descrição</label>
+          <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" value="<?php echo $this->pagamento->getDescricao(); ?>">
+        </div>
+        <div class="alert alert-danger descricao" style="display: none;" role="alert">
+          O campo descrição é obrigatório!
+        </div>
 
-
-
-<div class="card mb-3" style="background-color:rgba(0,0,0,0.8);">
-  <div class="card-body"> 
-    <div class="form-group">
-      <input type="hidden" id="id_pagamento" name="id_pagamento" value="<?php echo $this->pagamento->getId_pagamento(); ?>">
-      <label for="">Descrição</label>
-      <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite a descrição" value="<?php echo $this->pagamento->getDescricao(); ?>">
+        <br>
+        <div class="alert alert-success" style="display: none;" role="alert">
+          Edição efetuada com sucesso!
+        </div>
+        <button type="button" class="col-lg-2 btn btn-primary editarFormaPagamento">Salvar</button>
+        <a href="<?= $this->baseUrl('forma-pagamento') ?>" class="col-lg-2 btn btn-primary">Voltar</a>
+      </div>
     </div>
-
-    <br>
-    <button type="button" class="btn btn-block btn-primary editarFormaPagamento">Editar</button>
-    <a href="<?= $this->baseUrl('forma-pagamento') ?>" class="btn btn-block btn-danger btn-primary">Voltar</a>
-
-
-
-  </div>
-</div>
-
-
-</form>
+  </form>
 
 </div>
 <div class="col-lg-2"></div>
