Integração de Branchs de Maurício, Vagner e Rafael Torres

--- a/application/layouts/scripts/layout_secretario.phtml
+++ b/application/layouts/scripts/layout_secretario.phtml
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="pt-br">
     <head>
@@ -8,43 +7,69 @@
         <script type="text/javascript">
             var baseUrl = '<?= $this->baseUrl('/') ?>';
         </script>
-        <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/") ?> />
+        <link rel="icon" type="image/png" href=<?= $this->baseUrl("dist/img/bus.png") ?> />
         <!--Caminho da public "$this->baseUrl()-->
-        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap.css") ?> />
-        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/forma-pagamento.css") ?> />
-        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/categoriaPassageiro.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/bootstrap-cerulean.css") ?> />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/secretario.css") ?> />
+        <link rel="stylesheet" type="text/css" href=<?= $this->baseUrl("dist/css/switch-button.css") ?> />
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed" style="position: fixed; top:0; right:0; left:0; z-index:1030;">
-            <a class="navbar-brand" href="<?= $this->baseUrl("") ?>">
-                PampaBus
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+                <div class="container">
+                    <a class="navbar-brand" href="#">PampaBus</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="<?= $this->baseUrl("") ?>">
-                            Início
-                            <span class="sr-only">(current)</span></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav mr-auto">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="<?= $this->baseUrl("secretario") ?>">
+                                    <i class="fas fa-home"></i>
+                                    Início 
+                                    <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" title="(Alt+n) Visualizar Ônibus Urbanos" href="<?= $this->baseUrl("onibus-urbano") ?>">
+                                    <i class="fas fa-bus-alt"></i>
+                                    Ônibus <u>U</u>rbanos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" title="(Alt+i) Visualizar Ônibus Intermunicipais" href="<?= $this->baseUrl("onibus-intermunicipal") ?>">
+                                    <i class="fas fa-bus"></i>
+                                    Ônibus <u>I</u>ntermunicipais</a>
+                            </li>
+                        </ul>
 
-        <!--Conteudo das páginas-->
-        <div style="margin-top: 5%;">
-            <?php echo $this->layout()->content; ?>
-        </div>
+                        <ul class="navbar-nav flex-row ml-md-auto d-none d-md-flex">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" title="Conta PampaBus" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    <i class="fas fa-user"></i>
+                                    Fulano
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Dados Pessoais</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Sair</a>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
 
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
-        <script type="text/javascript" src="<?= $this->baseUrl('dist/js/categoria.js') ?>"></script>
-        <?= $this->headScript(); ?>
+            <!--Conteudo das páginas-->
+            <main style="margin-top: 1%;">
+                <?php echo $this->layout()->content; ?>
+            </main>
+            
+            
+
+            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/jquery-3.3.1.js') ?>"></script>
+            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootstrap.js') ?>"></script>
+            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/bootbox.min.js') ?>"></script>
+            <script type="text/javascript" src="<?= $this->baseUrl('dist/js/mask.js') ?>"></script>
+            <?= $this->headScript(); ?>
     </body>
 </html>
